--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,13 @@
 {
 	"dependencies": {
+		"@types/react-tooltip": "^3.9.0",
+		"axios": "^0.18.0",
 		"bulma": "^0.7.2",
 		"react": "^16.8.1",
 		"react-dom": "^16.8.1",
 		"react-router-dom": "^4.3.1",
-		"react-scripts-ts": "3.1.0"
+		"react-scripts-ts": "3.1.0",
+		"react-tooltip": "^3.9.2"
 	},
 	"devDependencies": {
 		"@types/jest": "^24.0.0",
