--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
 		"@types/react-tooltip": "^3.9.0",
 		"axios": "^0.18.0",
 		"bulma": "^0.7.2",
+		"devicon": "https://github.com/konpa/devicon",
 		"react": "^16.8.1",
 		"react-dom": "^16.8.1",
 		"react-router-dom": "^4.3.1",
