fix(PWA): Start URL Was Wrong

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -13,7 +13,7 @@
 			"type": "image/svg+xml"
 		}
 	],
-	"start_url": "./index.html",
+	"start_url": "/",
 	"display": "standalone",
 	"theme_color": "#E83F16",
 	"background_color": "#000000"
