--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.7.1",
 		"@types/react-tooltip": "^3.9.0",
 		"axios": "^0.18.0",
 		"bulma": "^0.7.2",
