--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
 		"axios": "^0.18.0",
 		"bulma": "^0.7.2",
 		"devicon": "https://github.com/konpa/devicon",
+		"moment": "^2.24.0",
 		"react": "^16.8.1",
 		"react-dom": "^16.8.1",
 		"react-router-dom": "^4.3.1",
