--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,16 @@
 		"@types/react": "^16.8.19",
 		"@types/react-dom": "^16.8.4",
 		"@types/react-router-dom": "^4.3.3",
+		"@typescript-eslint/eslint-plugin": "^2.19.2",
+		"@typescript-eslint/parser": "^2.19.2",
+		"eslint": "^6.8.0",
+		"eslint-config-prettier": "^6.10.0",
+		"eslint-config-react-app": "^5.2.0",
+		"eslint-plugin-flowtype": "^4.6.0",
+		"eslint-plugin-import": "^2.20.1",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-react": "^7.18.3",
+		"eslint-plugin-react-hooks": "^2.3.0",
 		"prettier": "^1.18.2",
 		"typescript": "^3.5.3"
 	},
@@ -35,6 +45,7 @@
 		"build": "react-scripts-ts build",
 		"eject": "react-scripts-ts eject",
 		"format": "prettier --write **/*.{tsx?,jsx?,json,css,ts,js,yml,md,html}",
+		"lint": "eslint . --ext .ts,.tsx,.js,.jsx --ignore-pattern node_modules --cache",
 		"start": "BROWSER=none react-scripts-ts start",
 		"test": "react-scripts-ts test --env=jsdom"
 	},
