--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3.5'
 services:
   frontend:
-    build: frontend
+    build:
+      context: .
+      dockerfile: packages/frontend/Dockerfile
     depends_on:
       - proxy
     restart: unless-stopped
