--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,36 +1,32 @@
 {
+	"browserslist": {
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		],
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		]
+	},
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^5.10.1",
-		"@types/react-tooltip": "^3.9.3",
 		"axios": "^0.19.0",
-		"bulma": "^0.7.5",
+		"bulma": "^0.8.0",
 		"devicon": "https://github.com/konpa/devicon",
 		"driveway": "^1.0.0",
 		"moment": "^2.24.0",
 		"react": "^16.8.1",
 		"react-dom": "^16.8.6",
-		"react-router-dom": "^4.3.1",
-		"react-scripts-ts": "3.1.0",
-		"react-tooltip": "^3.10.0"
+		"react-router-dom": "^5.1.2",
+		"react-tooltip": "^4.0.3"
 	},
 	"devDependencies": {
-		"@types/jest": "^24.0.17",
-		"@types/node": "^12.7.1",
-		"@types/react": "^16.8.19",
-		"@types/react-dom": "^16.8.4",
-		"@types/react-router-dom": "^4.3.3",
-		"@typescript-eslint/eslint-plugin": "^2.19.2",
-		"@typescript-eslint/parser": "^2.19.2",
-		"eslint": "^6.8.0",
-		"eslint-config-prettier": "^6.10.0",
-		"eslint-config-react-app": "^5.2.0",
-		"eslint-plugin-flowtype": "^4.6.0",
-		"eslint-plugin-import": "^2.20.1",
-		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-react": "^7.18.3",
-		"eslint-plugin-react-hooks": "^2.3.0",
-		"prettier": "^1.18.2",
-		"typescript": "^3.5.3"
+		"@types/react-router-dom": "^5.1.3",
+		"@types/react-tooltip": "^3.9.3",
+		"react-scripts": "^3.3.1"
 	},
 	"name": "frontend",
 	"prettier": {
@@ -42,12 +38,10 @@
 	},
 	"private": true,
 	"scripts": {
-		"build": "react-scripts-ts build",
-		"eject": "react-scripts-ts eject",
-		"format": "prettier --write **/*.{tsx?,jsx?,json,css,ts,js,yml,md,html}",
-		"lint": "eslint . --ext .ts,.tsx,.js,.jsx --ignore-pattern node_modules --cache",
-		"start": "BROWSER=none react-scripts-ts start",
-		"test": "react-scripts-ts test --env=jsdom"
+		"build": "react-scripts build",
+		"eject": "react-scripts eject",
+		"start": "BROWSER=none react-scripts start",
+		"test": "react-scripts test"
 	},
 	"version": "0.1.0"
 }
