--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"eslint-plugin-react": "^7.18.3",
 		"eslint-plugin-react-hooks": "^2.3.0",
 		"lerna": "^3.20.2",
+		"node-sass": "^4.13.1",
 		"prettier": "^1.18.2",
 		"typescript": "^3.7.5"
 	},
